novo teste bug dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,12 @@
     color-scheme: light dark;
 }
 
+html {
+    scroll-behavior: smooth;
+    font-family: "Readex Pro", sans-serif;
+    background-color: #e1e8d9;
+}
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -12,13 +18,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="number"] {
     -moz-appearance: textfield;
-}
-
-html {
-    scroll-behavior: smooth;
-    font-family: "Readex Pro", sans-serif;
-    background-color: #e1e8d9;
-    color-scheme: light dark;
 }
 
 body {
